@@ -2,6 +2,15 @@ Revision history for Dist-Zilla-Plugin-OSPrereqs
 
 {{$NEXT}}
 
+  [CHANGES]
+
+  Explicit use of the prereq_os option in configs now uses the proper option
+  name.
+
+  [DOCUMENTED]
+
+  The explicit use of the prereq_os option is now described.
+
 0.010     2018-04-22 22:00:43+02:00 Europe/Oslo
 
   [ADDED]
